<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/header">
    
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcometxt"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signintxt"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/yellow"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logintxt"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="35sp"
            android:layout_marginStart="35dp"
            android:textColor="@color/pink"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailtxt"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"/>
        
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enteremail"
            android:background="@drawable/forget"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="10dp"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordtxt"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterpassword"
            android:background="@drawable/forget"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/txtForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetpasswordtxt"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/pink"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:text="@string/logintxt"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donthaveaccounttxt"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/pink"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>