<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcometxt"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signuptxt"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/yellow"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registertxt"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textSize="35sp"
            android:layout_marginStart="35dp"
            android:textColor="@color/pink"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nametxt"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="7dp"
            android:layout_marginStart="40dp"/>

        <EditText
            android:id="@+id/edtfullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter the name"
            android:background="@drawable/forget"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="10dp"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailtxt"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="7dp"
            android:layout_marginStart="40dp"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter the email"
            android:background="@drawable/forget"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordtxt"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="7dp"
            android:layout_marginStart="40dp"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter the password"
            android:background="@drawable/forget"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conpasstxt"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="7dp"
            android:layout_marginStart="40dp"/>

        <EditText
            android:id="@+id/edtConPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Re-enter the password "
            android:background="@drawable/forget"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:text="@string/registertxt"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/haveAccounttxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadyhaveaccounttxt"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/pink"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>